--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Klassens Spillportal</title>
+    <title>Spillportal</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -99,7 +99,7 @@
 <body>
 
     <header>
-        <h1>🎮 Klassens Spillportal</h1>
+        <h1>🎮 Spillportal</h1>
         <p>Velg et spill for å starte!</p>
     </header>
 
@@ -110,8 +110,8 @@
         <a href="https://eikstuend.github.io/Escaperoom-Algebra/" class="card">
             <div class="card-image">🧮</div> <!-- Du kan bytte ut denne linjen med et bilde -->
             <div class="card-content">
-                <div class="card-title">Matte-quizen</div>
-                <div class="card-text">Øv på gangetabellen med dette spillet.</div>
+                <div class="card-title">Algebra-hacker</div>
+                <div class="card-text">Øv på algebra med dette spillet.</div>
             </div>
         </a>
         <!-- SPILL 1 SLUTT -->
@@ -120,8 +120,8 @@
         <a href="https://eikstuend.github.io/math-tower-defense-game/" class="card">
             <div class="card-image">🌍</div>
             <div class="card-content">
-                <div class="card-title">Geografi-gjett</div>
-                <div class="card-text">Hvor ligger landene i Europa?</div>
+                <div class="card-title">Matte Tower Defense</div>
+                <div class="card-text">Øv på regnestykker</div>
             </div>
         </a>
         <!-- SPILL 2 SLUTT -->
@@ -130,8 +130,8 @@
         <a href="https://eikstuend.github.io/EngelskAlias/">
             <div class="card-image">📝</div>
             <div class="card-content">
-                <div class="card-title">Gloseprøve</div>
-                <div class="card-text">Engelske gloser uke 42.</div>
+                <div class="card-title">Engelsk Alias</div>
+                <div class="card-text">Engelske gloser</div>
             </div>
         </a>
         <!-- SPILL 3 SLUTT -->
@@ -139,7 +139,7 @@
     </div>
 
     <footer>
-        Laget av Lærer [Ditt Navn]
+        Laget av Lærer [Kristian]
     </footer>
 
 </body>
